force-app/main/default/objects/Milestone1_Milestone__c/Milestone1_Milestone__c.object-meta.xml
<CustomObject>
    <description>Force.com Labs - PM - Milestones are significant events in the life-cycle of a Project. Milestones can have tasks and sub-milestones associated with them.</description>
    <label>Milestone</label>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>