force-app/main/default/objects/Milestone1_Milestone__c/fields/Delay_End__c.field-meta.xml
<CustomField>
    <fullName>Delay_End__c</fullName>
    <formula>Real_date_end__c  -   Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>