force-app/main/default/objects/Milestone1_Milestone__c/fields/Delay_Start__c.field-meta.xml
<CustomField>
    <fullName>Delay_Start__c</fullName>
    <formula>Real_date_start__c  -   Kickoff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>