force-app/main/default/objects/Milestone1_Milestone__c/fields/Gerencia__c.field-meta.xml
<CustomField>
    <fullName>Gerencia__c</fullName>
    <label>Gerencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servicios Contables</fullName>
            </value>
            <value>
                <fullName>Servicios de Recaudo y Pago</fullName>
            </value>
            <value>
                <fullName>Operación Digital</fullName>
            </value>
            <value>
                <fullName>Recaudos y Pagos</fullName>
            </value>
            <value>
                <fullName>Nequi</fullName>
            </value>
            <value>
                <fullName>Medios de pago</fullName>
            </value>
            <value>
                <fullName>Mercados capitales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>