force-app/main/default/objects/Milestone1_Milestone__c/fields/Global_status_use_case__c.field-meta.xml
<CustomField>
    <fullName>Global_status_use_case__c</fullName>
    <label>Global status use case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Stuck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>