force-app/main/default/objects/Milestone1_Milestone__c/fields/Kickoff__c.field-meta.xml
<CustomField>
    <fullName>Kickoff__c</fullName>
    <inlineHelpText>When should this milestone kickoff?</inlineHelpText>
    <label>Expected go live (Start)</label>
    <type>Date</type>
</CustomField>