force-app/main/default/objects/Milestone1_Milestone__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <inlineHelpText>The project this milestone is assigned to. If this is a sub-milestone this field is empty.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Milestone1_Project__c</referenceTo>
    <relationshipLabel>Use Cases</relationshipLabel>
    <relationshipName>Project_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>