force-app/main/default/objects/Milestone1_Milestone__c/fields/Real_date_end__c.field-meta.xml
<CustomField>
    <fullName>Real_date_end__c</fullName>
    <label>Real date (end)</label>
    <type>Date</type>
</CustomField>