force-app/main/default/objects/Milestone1_Milestone__c/fields/Real_date_start__c.field-meta.xml
<CustomField>
    <fullName>Real_date_start__c</fullName>
    <label>Real date (start)</label>
    <type>Date</type>
</CustomField>