force-app/main/default/objects/Milestone1_Milestone__c/fields/Scope_adopt__c.field-meta.xml
<CustomField>
    <fullName>Scope_adopt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scope adopt</label>
    <type>Checkbox</type>
</CustomField>