force-app/main/default/objects/Milestone1_Milestone__c/fields/Scope_Adopt_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scope_Adopt_Notes__c</fullName>
    <label>Scope Adopt Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>