force-app/main/default/objects/Milestone1_Milestone__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <label>Sprint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>