force-app/main/default/objects/Milestone1_Milestone__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Understanding</fullName>
                <default>true</default>
                <label>Understanding</label>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Delivery /Stabilization</fullName>
            </value>
            <value>
                <fullName>Customer approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>