force-app/main/default/objects/Milestone1_Milestone__c/fields/Use_Case_Evidence_approved__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Evidence_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Case Evidence approved</label>
    <type>Checkbox</type>
</CustomField>