force-app/main/default/objects/Milestone1_Milestone__c/listViews/Success_View.listView-meta.xml
<ListView>
    <fullName>Success_View</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Release__c</columns>
    <columns>Scope_adopt__c</columns>
    <columns>Total_Open_Tasks__c</columns>
    <columns>Use_Case_Type__c</columns>
    <columns>Category__c</columns>
    <columns>Global_status_use_case__c</columns>
    <filterScope>Everything</filterScope>
    <label>Success View</label>
</ListView>